--- a/style.css
+++ b/style.css
@@ -61,3 +61,8 @@ button:hover {
     background-color: #ff3b30;
     color: white;
 }
+
+.spacer {
+    visibility: hidden;
+    pointer-events: none;
+}
